--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>这里还很空，看来没啥事发生</h1>
+<p>什么事会记录在这里呢？</p>
 </body>
 </html>
